added some more generated files into ignore plus makefile config

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 ### Project specific
 
 firmware/lib
+server/bin
+server/.bin-stamp
 
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,circuitpython,go,linux,vim,windows
